--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -727,3 +727,14 @@ a {
     
     background-color: #00000082 !important;
 }
+
+#navbarTogglerBtn{
+    background-color: var(--bs-primary);
+}
+
+.rotate-animation {
+    transform: rotate(180deg);
+    transition: transform 0.5s ease;
+}
+
+
