--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3994,7 +3994,18 @@ textarea.form-control-lg {
   text-decoration: none;
   white-space: nowrap;
 }
-
+.btn-sin-funcionamiento{
+  cursor: none;
+  color: #333;
+  background-color: #666;
+  }
+  
+  .btn-sin-funcionamiento:hover{
+      cursor: auto;
+      color: #333;
+      background-color: #666;  
+  }
+  
 
 .navbar-nav {
   --bs-nav-link-padding-x: 0;
